# remotedata

./: .gitignore  .tagitrc  .travis.yml  README.md  pyproject.toml  remotedata.py  tox.ini
tests/: test_remotedata.py
tests/data/: largefile.txt  nometa.txt
